src/App.css
@layer base {

    @font-face {
      font-family: 'Source Sans Pro';
      /* font-weight: 400; */
      src: url('assets/fonts/source-sans-pro-regular.woff') format("woff");
    }
    @font-face {
      font-family: 'Degular';
      /* font-weight: 500; */
      src: url('assets/fonts/degular-bold.woff') format("woff");
    }
}

@layer utilities {
  @variants responsive {
    /* Chrome, Safari and Opera */
    .no-scrollbar::-webkit-scrollbar {
      display: none;
    }

    .no-scrollbar {
      -ms-overflow-style: none;  /* IE and Edge */
      scrollbar-width: none;  /* Firefox */
    }
  }
}

.big {
  font-size: 10rem;
}

.huge {
  font-size: 15rem;
}

